--- a/fsb.env
+++ b/fsb.env
@@ -1,9 +1,9 @@
 # Required Variables (DO NOT SKIP THESE)
 
-API_ID=
-API_HASH=
-BOT_TOKEN=
-LOG_CHANNEL=
+API_ID=5398201
+API_HASH=5b8436d35c5ab09d01026c261b2b9c1b
+BOT_TOKEN=7675399219:AAHlNCT3akSNfcMWGkL2kmAsfmF94t3XCu8
+LOG_CHANNEL=-1002620587375
 
 # Optional Variables
 
@@ -15,10 +15,10 @@ PORT=8080
 #                                /
 #                         This is the hash
 
-HASH_LENGTH=6
+HASH_LENGTH=8
 
 # you can use IP address
-# HOST=http://<ip address>:<PORT>
+  HOST=https://{{ KOYEB_PUBLIC_DOMAIN }}
 # Or you can also use a domain name
 # HOST=https://example.com
 
