--- a/fsb.env
+++ b/fsb.env
@@ -1,9 +1,9 @@
 # Required Variables (DO NOT SKIP THESE)
 
-API_ID=5398201
-API_HASH=5b8436d35c5ab09d01026c261b2b9c1b
-BOT_TOKEN=7675399219:AAHlNCT3akSNfcMWGkL2kmAsfmF94t3XCu8
-LOG_CHANNEL=-1002620587375
+API_ID=
+API_HASH=
+BOT_TOKEN=
+LOG_CHANNEL=
 
 # Optional Variables
 
@@ -18,7 +18,7 @@ PORT=8038
 HASH_LENGTH=8
 
 # you can use IP address
-  HOST=https://{{ KOYEB_PUBLIC_DOMAIN }}
+# HOST=
 # Or you can also use a domain name
 # HOST=https://example.com
 
